--- a/paper/references.bib
+++ b/paper/references.bib
@@ -342,3 +342,14 @@
   publisher={Nature Publishing Group}
 }
 
+@article {opentsne,
+    author = {Poli{\v c}ar, Pavlin G. and Stra{\v z}ar, Martin and Zupan, Bla{\v z}},
+    title = {{openTSNE: a modular Python library for t-SNE dimensionality reduction and embedding}},
+    year = {2019},
+    doi = {10.1101/731877},
+    publisher = {Cold Spring Harbor Laboratory},
+    URL = {https://www.biorxiv.org/content/early/2019/08/13/731877},
+    eprint = {https://www.biorxiv.org/content/early/2019/08/13/731877.full.pdf},
+    journal = {bioRxiv}
+}
+
