--- a/paper-revision/response-to-reviewers.tex
+++ b/paper-revision/response-to-reviewers.tex
@@ -202,7 +202,9 @@ Authors claim that in case of sub-figure c all genes may lead to under-clusterin
 
 \reviewc{r2q3}{The current paper is an extension of a conference paper submitted to the conference Discovery Science 2019. The authors should explicitly provide in the text the actual novel contributions with respect to the conference version.}
 
-\answer{}
+\answer{
+	We added a paragraph to the end of the introduction explicitly listing our contributions. The differences from the conference version are mainly an improved experimental section, where we show that a naive placement of the data points leads to misleading conclusions, and that optimization produces more reasonable results. Additionally, we provide the classification evaluation where we compare the classification accuracy of our proposed approach and standard machine learning methods for scRNA-seq data.
+}
 
 
 \reviewc{r2q4}{The authors should better emphasize the contribution from a methodological viewpoint. Indeed, without a proper emphasis on this aspect, the paper seems to be the application of an existing tool (namely, openTSNE) to a new dataset. If the contribution from a methodological viewpoint is actually limited, the authors should still put some effort in emphasizing the advantages of this approach in this specific domain.}
